src/objects/Player_Presence__c.object
<CustomObject>
    <fields>
        <fullName>Choice_Status__c</fullName>
        <label>Choice Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Going</fullName>
                </value>
                <value>
                    <fullName>Not going</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Event__c</fullName>
        <label>Event</label>
        <referenceTo>Volleyball_Event__c</referenceTo>
        <relationshipLabel>Players</relationshipLabel>
        <relationshipName>Player_Presences</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Is_Going__c</fullName>
        <formula>IF(ISPICKVAL(Choice_Status__c, &quot;Going&quot;), IMAGE(&quot;https://login.salesforce.com/logos/Standard/task/logo.svg&quot;, &quot;Green&quot;, 30, 30),
IMAGE(&quot;https://login.salesforce.com/logos/Custom/Bottle_Red/logo.png&quot;, &quot;Red&quot;, 30, 30))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Going</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Player__c</fullName>
        <label>Player</label>
        <referenceTo>Player__c</referenceTo>
        <relationshipLabel>Player Presences</relationshipLabel>
        <relationshipName>Events</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Player Presence</label>
    <nameField>
        <displayFormat>PP-{0000}</displayFormat>
        <label>Player Presence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Player Presences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>